# virgil-toybox

./: .gitignore  LICENSE  README.md  index.html  serve.sh  styles.css  wrangler.jsonc
scripts/: build-margin.py
the-margin/: index.html
the-margin/essays/: 2026-05-08-on-being-known.html  2026-05-08-the-newspaper-of-one.html  the-shape-of-the-thought.html  worse-is-better.html
the-margin/sources/: the-shape-of-the-thought.md  worse-is-better.md
toys/2026-03-27-vault-pulse/: README.md  index.html
toys/2026-04-17-focus-timer/focus-timer-backup/: Cargo.toml  README.md
toys/2026-04-17-focus-timer/focus-timer-backup/src/: tasks.rs  tui.rs
toys/2026-05-04-lsys-clock/: README.md  lsys_clock.py  run.sh
toys/2026-05-05-bichromator-cli/: README.md  bichromator
toys/2026-05-05-prose-bichromator/: README.md  index.html
toys/2026-05-07-measure-theory-sparring/: README.md  app.js  cards.js  index.html  serve.sh
toys/2026-05-08-bang-bang-game/: index.html  serve.sh
toys/2026-05-08-fishing-tui/: README.md  fishing.py
toys/2026-05-08-night-gazette/: README.md  gazette.css  gazette.py  index.html  template.html
toys/2026-05-09-bichromator-concrete/: README.md  concreteness.json  index.html  serve.sh
toys/2026-05-09-gravity-sandbox/: README.md  index.html  presets.json  serve.sh
toys/2026-05-09-lantern-keeper/: README.md  index.html  lanterns.json  serve.sh
toys/2026-05-09-markov-visualizer/: README.md  examples.json  index.html  serve.sh
toys/2026-05-09-sound-of-primes/: README.md  index.html  serve.sh
toys/bitshift-mask/: index.html
(+27 files in other folders)
