[package]
name = "focus-timer"
version = "0.1.0"
edition = "2021"
description = "Pomodoro / focus timer TUI that logs sessions to an Obsidian vault"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
